feat(neo4j): se agrego las consultas para agregar , listar e eliminar personas

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "type": "commonjs",
     "scripts": {
       "start": "node index.js",
+      "start:dev": "node index.js",
+      "dev": "node index.js",
       "setup": "node src/setup.js"
     },
     "dependencies": {
